more tests around module options